Refactoring Project adding Mutator
Lines Mutator and StringExtension Method

--- a/StringMutator.Runner/StringMutator.Runner.csproj
+++ b/StringMutator.Runner/StringMutator.Runner.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StringMutator.Mutate\StringMutator.Mutate.csproj" />
+    <ProjectReference Include="..\StringMutator.Extension\StringMutator.Extension.csproj" />
   </ItemGroup>
 </Project>
