Adding Dummy Test
Getting xUnit setup and configured

--- a/StringMutator.Tests/StringMutator.Tests.csproj
+++ b/StringMutator.Tests/StringMutator.Tests.csproj
@@ -12,5 +12,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StringMutator.Runner\StringMutator.Runner.csproj" />
+    <ProjectReference Include="..\StringMutator.Extension\StringMutator.Extension.csproj" />
   </ItemGroup>
 </Project>
